# pokemon-battle

./: README.md  pyproject.toml
src/: main.py  optimize.py  predict.py  prepare.py  train.py  visualize.py
src/data/: X_test.npy  pokedex.csv  y_test.npy  y_train.npy
src/model/: best_params.pkl
