[project]
name = "pokemon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Lefrancq", email = "david.lefrancq@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "numpy>=2.1.3", "scikit-learn>=1.5.2", "seaborn>=0.13.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
"start" = "python src/main.py"
"prepare" = "python src/prepare.py"
"visualize" = "python src/visualize.py"
"optimize" = "python src/optimize.py"
"train" = "python src/train.py"
"predict" = "python src/predict.py"